#
# some news ... see also TODO for hints
#

2017-12-28 -> fix warning

2017-08-09 -> some smaller gettext changes/adds

2017-01-XX -> add server handling via kdo arguments
	      add first skeleton for server handling via configuration file
	      add runit service file
	      a lot of smaller cleanups/improvements
	      sync to latest libbaalue

2016-11-18 -> cleanup and continue steps

2016-09-14 -> sync to latest libbaalue

2015-10-11 -> add some skeleton stuff