@@ -2,6 +2,8 @@
 # some news ... see also TODO for hints
 #
 
+2020-08-02 -> update gettext.h
+
 2017-12-28 -> fix warning
 
 2017-08-09 -> some smaller gettext changes/adds
